--- a/Remember-the-Cow/cow.css
+++ b/Remember-the-Cow/cow.css
@@ -1,6 +1,5 @@
 /*
-Nadia Kazi, CSE 190M
-May 24, 2012, Section MJ
+Nadia Kazi,
 The purpose of this file is to style the Remember the Cow webpage.   
 */
 
